chore: improve code quality
Cleanup of code reported by Sonarlint